# m2m-aligner

./: CMakeLists.txt  README
apps/: CMakeLists.txt
apps/mmAligner/: CMakeLists.txt  mmAligner.cpp
lib/: CMakeLists.txt  mmEM.cpp  param.h
