#m2m library

SET (M2MLIB_SRCS
  ${CMAKE_CURRENT_SOURCE_DIR}/mmEM.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/mmEM.h
  ${CMAKE_CURRENT_SOURCE_DIR}/param.h
  ${CMAKE_CURRENT_SOURCE_DIR}/util.h
  )

ADD_LIBRARY(${M2M_LIBRARIES} ${LINKING_MODE}
  ${M2MLIB_SRCS}
)

#target_link_libraries(${M2M_LIBRARIES}
#	pthread
#)

INSTALL(TARGETS ${M2M_LIBRARIES} RUNTIME DESTINATION bin LIBRARY DESTINATION bin ARCHIVE DESTINATION bin)
