PROJECT(mmAligner)

ADD_EXECUTABLE(mmAligner
    mmAligner.cpp
    )

TARGET_LINK_LIBRARIES(mmAligner
    ${Boost_PROGRAM_OPTIONS_LIBRARY}
    ${Boost_FILESYSTEM_LIBRARY}
    ${Boost_THREAD_LIBRARY}
    ${Boost_SYSTEM_LIBRARY}
    ${M2M_LIBRARIES}
    )

INSTALL(TARGETS mmAligner RUNTIME DESTINATION bin LIBRARY DESTINATION bin ARCHIVE DESTINATION bin)